--- a/appspec.yml
+++ b/appspec.yml
@@ -7,6 +7,6 @@ hooks:
       timeout: 300
       runas: root
   AfterInstall:
-    - location: AWS/start_container.sh
+    - location: start_container.sh
       timeout: 300
       runas: root
